# Python-EPnP

./: CMakeLists.txt  README.md  setup.py
pybind11/: pybind11.cbp
src/: PnPsolver.cpp  PnPsolver.h  pyepnp.cpp
src/cv2pnp/: CV2PnPsolver.cpp  CV2PnPsolver.h  PnPsolver.cc  PnPsolver.h
tests/: test.py
